--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=168,26
+Pos=139,43
 Size=550,680
 Collapsed=0
 
@@ -71,5 +71,10 @@ Collapsed=0
 [Window][About Pathfinding Simulator]
 Pos=218,94
 Size=135,86
+Collapsed=0
+
+[Window][Physics Settings ]
+Pos=0,0
+Size=92,54
 Collapsed=0
 
